$Id$

MIDIbox KB V1.016
~~~~~~~~~~~~~~~~~

   o Support for AINSER8 module
     It has to be connected to J19; chip select line RC1 will be used (set jumper J4 accordingly)
     In the AIN configuration it can be selected as pin 128..135


MIDIbox KB V1.015
~~~~~~~~~~~~~~~~~

   o STM32F4: support for bootloader "enforce_usb_device" flag


MIDIbox KB V1.014
~~~~~~~~~~~~~~~~~

   o added "break_is_make" option which allows to trigger a note when the break
     contact is activated (nice for playing organ style)


MIDIbox KB V1.013
~~~~~~~~~~~~~~~~~

   o the MIDI router forwards SysEx messages regardless if channels are filtered,
     or "All" is used. It's ensured that messages are only sent once if multiple
     router nodes forward to the same destination port.

   o added "make_debounced" parameter: Note Off will be played when the
     Break contact has been released, and not when the Make contact has been released.

   o support for MBHP_CORE_STM32F4


MIDIbox KB V1.012
~~~~~~~~~~~~~~~~~

   o MIDI router configuration now stored in EEPROM


MIDIbox KB V1.011
~~~~~~~~~~~~~~~~~

   o support for "ain_bandwidth_ms" which allows to reduce the number of generated events
     over time.

   o added "ain_pitchwheel_inverted", "ain_modwheel_inverted", "ain_sustain_inverted"

   o added "ain_sustain_switch", which allows to change between switch and pot behaviour


MIDIbox KB V1.010
~~~~~~~~~~~~~~~~~

   o bugfix for "single_usb" option


MIDIbox KB V1.009
~~~~~~~~~~~~~~~~~

   o support for the "single_usb" option, which can be enabled with the
     bootloader update application V1.012 ("set usb_single 1")

     Use this option if you are working with a Windows PC which can't handle
     the 4 USB ports correctly (e.g. stucking MIDI, Filebrowser operations are failing, etc.)

   o support for Note Off velocity (implemented by Jo aka. Nlate).
     This feature has to be enabled with the release_velocity parameter. In addition, some