@@ -106,11 +106,13 @@
 #define PRESETS_ADDR_KB2_AIN_CFG2_2      (0xce + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xee
 #define PRESETS_ADDR_KB2_AIN_CFG3_1      (0xcf + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xef
 #define PRESETS_ADDR_KB2_AIN_CFG3_2      (0xd0 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf0
-#define PRESETS_ADDR_KB2_DELAY_FASTEST_BLACK_KEYS         (0xd1 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf1
-#define PRESETS_ADDR_KB2_DELAY_FASTEST_RELEASE            (0xd2 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf2
-#define PRESETS_ADDR_KB2_DELAY_FASTEST_RELEASE_BLACK_KEYS (0xd3 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf3
-#define PRESETS_ADDR_KB2_DELAY_SLOWEST_RELEASE            (0xd4 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf4
-#define PRESETS_ADDR_KB2_AIN_CFG4        (0xd5 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf5
+#define PRESETS_ADDR_KB2_AIN_CFG4_1      (0xd1 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xef
+#define PRESETS_ADDR_KB2_AIN_CFG4_2      (0xd2 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf0
+#define PRESETS_ADDR_KB2_AIN_CFG4        (0xd3 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf5
+#define PRESETS_ADDR_KB2_DELAY_FASTEST_BLACK_KEYS         (0xd4 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf1
+#define PRESETS_ADDR_KB2_DELAY_FASTEST_RELEASE            (0xd5 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf2
+#define PRESETS_ADDR_KB2_DELAY_FASTEST_RELEASE_BLACK_KEYS (0xd6 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf3
+#define PRESETS_ADDR_KB2_DELAY_SLOWEST_RELEASE            (0xd7 + 1*PRESETS_OFFSET_BETWEEN_KB_RECORDS) // 0xf4
 
 
 #define PRESETS_ADDR_ROUTER_BEGIN        0x100 // allocates 2*16 halfwords (4*16 bytes)
