@@ -7,6 +7,8 @@ MIDIbox KB V1.016
      It has to be connected to J19; chip select line RC1 will be used (set jumper J4 accordingly)
      In the AIN configuration it can be selected as pin 128..135
 
+   o added 4th AIN pin for "expression pedal" (CC#11 by default can be re-assigned).
+
 
 MIDIbox KB V1.015
 ~~~~~~~~~~~~~~~~~
